2003-09-05  Marcus Lundblad  <ml@update.uu.se>

	* libs/Flocale.c (FlocaleDrawUnderline): 
	Fixed bug with text width when a string contains only
	"orphaned" combining characters (compensation for font shadowd
	was counted twice)
	
2003-09-04  olicha  <olivier.chapuis@free.fr>

	* todo-2.6:
	Added E.18, added comments on C.9 and C.15

2003-09-03  olicha  <olivier.chapuis@free.fr>

	* libs/Flocale.c (FlocaleTextWidth):
	Fixed a comb_char core dump

	* libs/Makefile.am:
	Fixed compilation if either iconv, libpng or Xrender headers are
	not at a standard place

2003-09-03  Mikhael Goikhman  <migo@homemail.com>

	* acinclude.m4:
	fixed error message for incorrect --with-SOMETHING-library argument

2003-09-03  olicha  <olivier.chapuis@free.fr>

	* todo-2.6:
	Closed C.2 as Dominik fix it on 2003-03-13. Move B.5 to C.27

2003-09-02  olicha  <olivier.chapuis@free.fr>

	* todo-2.6: 
	C.12 is fixed

2003-09-01  olicha  <olivier.chapuis@free.fr>

	* libs/gravity.c (gravity_dir_to_string):
	A new interface function to transform a direction_t to a string

2003-08-31  S. Anderson  <sa@xmission.com>

	* libs/defaults.h (FLOCALE_MB_FALLBACK_FONT): 
	Fixed missing font charsets

2003-08-28  olicha  <olivier.chapuis@free.fr>

	* fvwm/move_resize.c (__move_loop):
	(AnimatedMoveAnyWindow):
	Updated bg of transparent tear off menu when moved

	* fvwm/events.c (HandlePropertyNotify):
	Updated ParentRelative tear off menu on bg change
 
	* fvwm/menus.c (UpdateMenuColorset):
	Updated colorsets of tear off menu when they change, this handle the
	case of root background change for RootTransparent

	* fvwm/menus.h:
	* fvwm/menus.c (menu_redraw_pr_tear_off_menu):
	An utility function for redrawing transparent tear off menu. Maybe
	we can merge
	
	* fvwm/add_window.c (validate_transientfor):
	Fixed transient for an ewmh desktop

2003-08-27  olicha  <olivier.chapuis@free.fr>

	* libs/FRender.c (FRenderRender):
	* libs/PictureGraphics.c (PGraphicsCreateTranslucent):